--- a/Build-a-Random-Quote-Machine-main/index.html
+++ b/Build-a-Random-Quote-Machine-main/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-
+//created by Arslan
   <!-- Scripts -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
